Fix the Web Bluetooth chooser when it is used on Chrome apps on non-Mac

This CL adds code to override the views::DialogDelegate::CreateClientView()
and views::DialogDelegate::CreateNonClientFrameView() to fix the artifacts
on the Web Bluetooth chooser when it is used on Chrome apps on non-Mac.

I uploaded some screenshots on the issue page.

BUG=662444

Review-Url: https://codereview.chromium.org/2478863003
Cr-Commit-Position: refs/heads/master@{#431120}

Former-commit-id: 3e540deecddbbdc2f857bba72f0fc19bdd4b3f04