chrome/browser/ui/views/constrained_web_dialog_delegate_views.cc
@@ -200,7 +200,7 @@ class ConstrainedWebDialogDelegateViewViews
   views::View* GetContentsView() override { return this; }
   views::NonClientFrameView* CreateNonClientFrameView(
       views::Widget* widget) override {
-    return views::DialogDelegate::CreateDialogFrameView(widget);
+    return views::DialogDelegate::CreateDialogFrameView(widget, gfx::Insets());
   }
   bool ShouldShowCloseButton() const override {
     // No close button if the dialog doesn't want a title bar.
