chrome/browser/ui/views/extensions/chooser_dialog_view.cc
@@ -11,8 +11,10 @@
 #include "components/constrained_window/constrained_window_views.h"
 #include "components/web_modal/web_contents_modal_dialog_manager.h"
 #include "content/public/browser/browser_thread.h"
+#include "ui/gfx/geometry/insets.h"
 #include "ui/views/controls/link.h"
 #include "ui/views/controls/styled_label.h"
+#include "ui/views/layout/layout_constants.h"
 #include "ui/views/window/dialog_client_view.h"
 
 ChooserDialogView::ChooserDialogView(
@@ -61,7 +63,24 @@ bool ChooserDialogView::IsDialogButtonEnabled(ui::DialogButton button) const {
 }
 
 views::View* ChooserDialogView::CreateFootnoteView() {
-  return chooser_content_view_->CreateFootnoteView();
+  return chooser_content_view_->footnote_link();
+}
+
+views::ClientView* ChooserDialogView::CreateClientView(views::Widget* widget) {
+  views::DialogClientView* client =
+      new views::DialogClientView(widget, GetContentsView());
+  client->set_button_row_insets(gfx::Insets());
+  return client;
+}
+
+views::NonClientFrameView* ChooserDialogView::CreateNonClientFrameView(
+    views::Widget* widget) {
+  // ChooserDialogView always has a parent, so ShouldUseCustomFrame() should
+  // always be true.
+  DCHECK(ShouldUseCustomFrame());
+  return views::DialogDelegate::CreateDialogFrameView(
+      widget, gfx::Insets(views::kPanelVertMargin, views::kPanelHorizMargin,
+                          views::kPanelVertMargin, views::kPanelHorizMargin));
 }
 
 bool ChooserDialogView::Accept() {
