chrome/browser/ui/views/extensions/chooser_dialog_view_unittest.cc
@@ -7,6 +7,7 @@
 #include <memory>
 
 #include "base/macros.h"
+#include "base/memory/ptr_util.h"
 #include "base/strings/utf_string_conversions.h"
 #include "chrome/browser/chooser_controller/mock_chooser_controller.h"
 #include "chrome/browser/ui/views/chooser_content_view.h"
@@ -16,6 +17,7 @@
 #include "ui/views/controls/button/label_button.h"
 #include "ui/views/controls/styled_label.h"
 #include "ui/views/controls/table/table_view.h"
+#include "ui/views/test/native_widget_factory.h"
 #include "ui/views/test/views_test_base.h"
 #include "ui/views/widget/widget.h"
 #include "ui/views/window/dialog_client_view.h"
@@ -33,14 +35,23 @@ class ChooserDialogViewTest : public views::ViewsTestBase {
     mock_chooser_controller_ = mock_chooser_controller.get();
     std::unique_ptr<ChooserDialogView> chooser_dialog_view(
         new ChooserDialogView(std::move(mock_chooser_controller)));
-    footnote_link_.reset(chooser_dialog_view->chooser_content_view_for_test()
-                             ->CreateFootnoteView());
     chooser_dialog_view_ = chooser_dialog_view.get();
     table_view_ =
         chooser_dialog_view_->chooser_content_view_for_test()->table_view_;
     ASSERT_TRUE(table_view_);
+
+    views::Widget::InitParams params =
+        CreateParams(views::Widget::InitParams::TYPE_WINDOW);
+    params.bounds = gfx::Rect(0, 0, 600, 600);
+    params.ownership = views::Widget::InitParams::WIDGET_OWNS_NATIVE_WIDGET;
+    parent_widget_ = base::MakeUnique<views::Widget>();
+    params.native_widget = views::test::CreatePlatformDesktopNativeWidgetImpl(
+        params, parent_widget_.get(), nullptr);
+    parent_widget_->Init(params);
+
     dialog_ = views::DialogDelegate::CreateDialogWidget(
-        chooser_dialog_view.release(), GetContext(), nullptr);
+        chooser_dialog_view.release(), GetContext(),
+        parent_widget_->GetNativeView());
     ASSERT_TRUE(dialog_);
     ok_button_ = chooser_dialog_view_->GetDialogClientView()->ok_button();
     ASSERT_TRUE(ok_button_);
@@ -52,17 +63,18 @@ class ChooserDialogViewTest : public views::ViewsTestBase {
   // views::ViewsTestBase:
   void TearDown() override {
     dialog_->CloseNow();
+    parent_widget_->CloseNow();
     views::ViewsTestBase::TearDown();
   }
 
  protected:
-  MockChooserController* mock_chooser_controller_;
-  ChooserDialogView* chooser_dialog_view_;
-  std::unique_ptr<views::StyledLabel> footnote_link_;
-  views::TableView* table_view_;
-  views::LabelButton* ok_button_;
-  views::LabelButton* cancel_button_;
-  views::Widget* dialog_;
+  MockChooserController* mock_chooser_controller_ = nullptr;
+  ChooserDialogView* chooser_dialog_view_ = nullptr;
+  std::unique_ptr<views::Widget> parent_widget_;
+  views::TableView* table_view_ = nullptr;
+  views::LabelButton* ok_button_ = nullptr;
+  views::LabelButton* cancel_button_ = nullptr;
+  views::Widget* dialog_ = nullptr;
 
  private:
   DISALLOW_COPY_AND_ASSIGN(ChooserDialogViewTest);
